--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,11 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_animate: ^4.5.0
+  percent_indicator: ^4.2.3
   persistent_bottom_nav_bar: ^6.2.1
 
 dev_dependencies:
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
 
@@ -53,6 +54,9 @@ flutter:
   assets:
     - lib/assets/splash.png
     - lib/assets/google_logo.png
+    - lib/assets/profile.png
+    - lib/assets/pray_icon.png
+    - lib/assets/infaq_icon.png
     #   - images/a_dot_ham.jpeg
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware
