--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_animate: ^4.5.0
+  intl: ^0.19.0
   percent_indicator: ^4.2.3
   persistent_bottom_nav_bar: ^6.2.1
 
@@ -57,6 +58,7 @@ flutter:
     - lib/assets/profile.png
     - lib/assets/pray_icon.png
     - lib/assets/infaq_icon.png
+    - lib/assets/ustad.png
     #   - images/a_dot_ham.jpeg
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware
