Komunitas screen tab tanya jawab

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ flutter:
     - lib/assets/pray_icon.png
     - lib/assets/infaq_icon.png
     - lib/assets/ustad.png
+    - lib/assets/ustad2.png
+    - lib/assets/ustad3.png
     #   - images/a_dot_ham.jpeg
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware
