--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,10 +58,11 @@ flutter:
     - lib/assets/profile.png
     - lib/assets/pray_icon.png
     - lib/assets/infaq_icon.png
-    - lib/assets/ustad.png
+    - lib/assets/event1.png
     - lib/assets/ustad2.png
     - lib/assets/ustad3.png
     - lib/assets/event1.png
+    - lib/assets/event2.png
     #   - images/a_dot_ham.jpeg
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware
