Home screen logic

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ flutter:
     - lib/assets/pray_icon.png
     - lib/assets/infaq_icon.png
     - lib/assets/event1.png
+    - lib/assets/ustad.png
     - lib/assets/ustad2.png
     - lib/assets/ustad3.png
     - lib/assets/event1.png
